syntax = "proto3";

package client;

option go_package = "client/proto";

message Data {
  message Password {
    string login = 1;
    string password = 2;
  }

  message Text {
    string text = 1;
  }

  message Binary {
    bytes data = 1;
  }

  message Card {
    string number = 1;
    string expiry = 2;
    string cvc = 3;
  }

  oneof data {
    Password password_data = 1;
    Text text_data = 2;
    Binary binary_data = 3;
    Card card_data = 4;
  }
}